# goit-pythonweb-hw-06

./: connect.py  models.py  my_select.py  pyproject.toml  rollback_script.sql  seeds.py
alembic/: env.py
alembic/versions/: bcf4e67817be_init.py
